--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "nextapp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,56 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.4"
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-tailwind/react": "^2.1.2",
+    "@mui/material": "^5.14.8",
+    "@nextui-org/pagination": "^2.0.27",
+    "@nextui-org/react": "^2.1.13",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.2",
+    "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
+    "cookies-next": "^4.0.0",
+    "flipping-pages": "^3.1.0",
+    "flowbite": "^2.0.0",
+    "flowbite-react": "^0.6.4",
+    "formik": "^2.4.4",
+    "framer-motion": "^10.16.4",
+    "gsap": "^3.12.5",
+    "jquery": "^3.7.1",
+    "metismenujs": "^1.4.0",
+    "next": "^13.5.4",
+    "primeicons": "^6.0.1",
+    "primereact": "^10.3.3",
+    "react": "^18.0.0",
+    "react-bootstrap": "^2.9.0",
+    "react-data-table-component": "^7.5.4",
+    "react-datepicker": "^4.21.0",
+    "react-dom": "^18.0.0",
+    "react-google-charts": "^4.0.1",
+    "react-helmet": "^6.1.0",
+    "react-owl-carousel": "^2.3.3",
+    "react-pageflip": "^2.0.3",
+    "react-paginate": "^8.2.0",
+    "react-redux": "^8.1.2",
+    "react-responsive-carousel": "^3.2.23",
+    "react-search-autocomplete": "^8.5.2",
+    "react-select": "^5.8.0",
+    "react-slick": "^0.30.1",
+    "react-toastify": "^9.1.3",
+    "reactstrap": "^9.2.0",
+    "sass": "^1.67.0",
+    "sharp": "^0.32.6",
+    "simplebar-react": "^3.2.4",
+    "swr": "^2.2.4",
+    "tw-elements": "^1.0.0",
+    "typescript": "^5.2.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
